# binance

lib/cpr/: cpr.exp  cpr.lib  libcurl-d_imp.exp  libcurl-d_imp.lib  zlib.exp  zlib.lib
source/: CMakeLists.txt  main.cpp
